2002-11-01  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* plot/contour.m: Handle x and y as matrices too.

2002-11-01  Joseph P. Skudlarek <jskud@jskud.com>

	* plot/contour.m: Fix error and usage messages.

2002-11-01  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* plot/contour.m: Correct orientation of plot.

2002-10-31  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* control/base/analdemo.m: Fix typo.

2002-10-31  Francesco Potorti` <pot@gnu.org>

	* statistics/distributions/discrete_pdf.m: Fix typo.

2002-10-09  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* mkdoc: Exit immediately on errors.
	Exit with error if gethelp does not exist.

	* Makefile.in: Use $(BUILD_EXEEXT) as appropriate.

2002-10-08  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* Makefile.in (gethelp): Use $(BUILD_CXX), not $(CXX).

2002-09-27  Paul Kienzle <pkienzle@users.sf.net>

	* statistics/distributions/normal_cdf.m: Handle variance == 0.
	* statistics/distributions/normal_pdf.m: Likewise.
	* statistics/distributions/normal_inv.m: Likewise.

2002-09-27  Paul Kienzle <pkienzle@users.sf.net>

	* specfun/erfinv.m: Return NaN for NaN inputs.

2002-09-26  Jeff Cunningham <jeffrey@cunningham.net>

	* statistics/base/var.m: Handle complex values.

2002-08-09  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* configure.in (AC_CONFIG_FILES): Add deprecated/Makefile to the
	list.
	* deprecated/Makefile.in: New file.

2002-08-09  Paul Kienzle <pkienzle@users.sf.net>

	* statistics/distributions/beta_cdf.m: Replace betai with betainc.
	* statistics/distributions/binomial_cdf.m: Likewise.
	* statistics/distributions/f_cdf.m: Likewise.
	* statistics/distributions/t_cdf.m: Likewise.

	* miscellaneous/bincoeff.m: Replace lgamma with gammaln.
	* specfun/beta.m: Likewise.
	* special-matrix/invhilb.m: Likewise (but it is only in a comment).
	* statistics/distributions/gamma_pdf.m: Likewise.
	* statistics/distributions/poisson_pdf.m: Likewise.

	* statistics/distributions/gamma_cdf.m: replace gammai with gammainc