@@ -122,6 +122,10 @@ octave_strncasecmp (const char *s1, const char *s2, size_t n)
 // We manage storage.  User should not free it, and its contents are
 // only valid until next call to vsnprintf.
 
+#if defined __GNUC__ && __GNUC__ >= 3
+#define HAVE_C99_VSNPRINTF 1
+#endif
+
 char *
 octave_vsnprintf (const char *fmt, va_list args)
 {
@@ -130,21 +134,47 @@ octave_vsnprintf (const char *fmt, va_list args)
 
   static char *buf = 0;
 
+  int nchars;
+
   if (! buf)
     buf = malloc (size);
 
+#if defined (HAVE_C99_VSNPRINTF)
+
+  nchars = vsnprintf (buf, size, fmt, args);
+
+  if (nchars >= size)
+    {
+      size = nchars + 1;
+      buf = realloc (buf, size);
+
+      if (buf)
+	vsnprintf (buf, size, fmt, args);
+
+      return buf;
+    }
+
+#else
+
   while (1)
     {
-      int nchars = vsnprintf (buf, size, fmt, args);
+      nchars = vsnprintf (buf, size, fmt, args);
 
       if (nchars > -1)
 	return buf;
       else
 	{
 	  size *= 2;
+
 	  buf = realloc (buf, size);
+
+	  if (! buf)
+	    return 0;
 	}
     }
+
+#endif
+
 #else
   return 0;
 #endif
