@@ -1,3 +1,11 @@
+2002-11-04  Nicholas Piper <nick-octave@nickpiper.co.uk>
+
+	* control/base/lsim.m: Correct doc string.
+
+2002-11-04  A S Hodel <a.s.hodel@Eng.Auburn.EDU>
+
+	* control/system/syssub.m: Call tf2sys with Gnum-Hnum, not Gnum+Hnum.
+
 2002-11-01  John W. Eaton  <jwe@bevo.che.wisc.edu>
 
 	* plot/contour.m: Handle x and y as matrices too.
